<resources>
  <string name="app_name">CircularProgressBar-demo</string>
  <string name="buttonDeterminateGo">Go (75%)</string>
  <string name="buttonDeterminateGoNoAnim">Go (75% - No anim)</string>
  <string name="buttonDeterminateReset">Reset</string>
  <string name="buttonDeterminateResetNoAnim">Reset (No anim)</string>
  <string name="buttonDeterminateCountdown">Countdown</string>
  <string name="buttonIndeterminateStart">Start</string>
  <string name="buttonIndeterminateStop">Stop</string>
  <string name="click">Try to click on a CircularProgressBar</string>
</resources>
